// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardNumberInput should render all but the detected card scheme with reduced opacity 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, jcb.
    Detected scheme: visa
  </div>,
  .circuit-12 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-10 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
}

@media (min-width:451px) {
  .circuit-10 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

.circuit-4 {
  display: inline-block;
}

.circuit-4:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-4 > svg {
  width: auto;
  height: 16px;
}

.circuit-2 {
  display: inline-block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  opacity: 0.2;
}

.circuit-2:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-2 > svg {
  width: auto;
  height: 16px;
}

<div
    className="circuit-12 circuit-13"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      name="creditCardInput"
      onChange={[Function]}
      required={false}
      type="tel"
      value="4485 7197 7461 1397"
    />
    <ul
      aria-hidden="true"
      className="circuit-10 circuit-11"
    >
      <li
        className="circuit-2 circuit-3"
        disabled={true}
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-3"
        disabled={false}
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled={true}
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled={true}
      >
        <div>
          jcb.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`CardNumberInput should render with default styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, jcb.
    Detected scheme: visa
  </div>,
  .circuit-12 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-10 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
}

@media (min-width:451px) {
  .circuit-10 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

.circuit-2 {
  display: inline-block;
}

.circuit-2:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-2 > svg {
  width: auto;
  height: 16px;
}

<div
    className="circuit-12 circuit-13"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      name="creditCardInput"
      onChange={[Function]}
      required={false}
      type="tel"
      value=""
    />
    <ul
      aria-hidden="true"
      className="circuit-10 circuit-11"
    >
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          jcb.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`CardNumberInput should render with styles for more than 5 card schemes 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, discover, jcb, elo, maestro.
    
  </div>,
  .circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-2 {
  display: inline-block;
}

.circuit-2:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-2 > svg {
  width: auto;
  height: 16px;
}

.circuit-18 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

@media (max-width:450px) {
  .circuit-18 {
    margin-bottom: 32px;
    margin-bottom: calc(32px + 4px);
  }
}

.circuit-16 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
}

@media (min-width:451px) {
  .circuit-16 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

@media (max-width:450px) {
  .circuit-16 {
    top: -75%;
    top: calc(100% + 4px);
    bottom: initial;
    left: 0;
    width: 100%;
    text-align: left;
  }
}

<div
    className="circuit-18 circuit-19"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      name="creditCardInput"
      onChange={[Function]}
      required={false}
      type="tel"
      value=""
    />
    <ul
      aria-hidden="true"
      className="circuit-16 circuit-17"
    >
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          discover.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          jcb.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          elo.svg
        </div>
      </li>
      <li
        className="circuit-2 circuit-3"
        disabled=""
      >
        <div>
          maestro.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;
